# synchronous-client-server-kvstore

./: Cargo.toml  LICENSE  README.md
notes/: kvs-client-protocol.md  kvs-client.md  kvs-server-protocol.md  kvs-server.md  log_crate.md  overview.md  protocol.md  serialize.md  sled.md  slog_crate.md  std_net_tcp.md
src/: errors.rs  kv.rs  lib.rs  request.rs  response.rs  server.rs
src/engine/: command.rs  kv.rs  kvs_engine.rs  mod.rs  sled.rs
